--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -5,7 +5,10 @@
 $sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
 
-$body-font-size:    14px;
-$body-line-height:  1.5;
-$scale-factor:      1.5;
+$body-font-size:    16px;
+$body-line-height:  $perfect-fourth;
+$scale-factor:      $perfect-fourth;
 $ie8compatability:  false;
+
+// Animation
+$duration: 300ms;
