--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -1,5 +1,8 @@
-
-
+// Colors
+$brand:  #a00;
+$dark:   #332;
+$medium: #666;
+$light:  #ccc;
 
 // Type
 $sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
